# CRSDK_CameraServer

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.ja.md  README.ko.md  README.md  STATUS.md  bindings.rs  build.rs  ptpcamerad_hook.c  readme.md  wrapper.cpp  wrapper.hpp
assets/: AppIcon.icns
crsdk_server/: Cargo.toml  build.rs
crsdk_server/src/: main.rs
crsdk_server/web/: index.html
docs/: WINDOWS-PORT.md
scripts/: installer.iss  make_app.sh  make_dist.sh  make_dmg.sh  make_icon.sh  package-win.ps1  test.sh
src/: callback.rs  capability.rs  connection.rs  control.rs  enumerate.rs  error.rs  ffi.rs  lib.rs  liveview.rs  main.rs  properties.rs  session.rs  shutter.rs
wrapper/: wrapper.cpp  wrapper.h
