[workspace]
members = ["crsdk_server"]

[package]
name = "crsdk"
version = "0.2.0"
edition = "2021"
description = "Sony Camera Remote SDK v2.01.00 Rust wrapper (A7C/ILCE-7C)"

[[bin]]
name = "crsdk_example"
path = "src/main.rs"

[lib]
name = "crsdk"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
thiserror = "1.0"
ctrlc     = "3"

[build-dependencies]
cc      = "1.0"
bindgen = "0.69"

[profile.release]
opt-level = 3
lto       = true
strip     = true
