[package]
name = "crsdk_server"
version = "0.2.5"
edition = "2021"
description = "axum HTTP/SSE server exposing crsdk for browser/PWA clients"

[[bin]]
name = "crsdk_server"
path = "src/main.rs"

[dependencies]
crsdk      = { path = ".." }
axum       = "0.7"
tokio      = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tracing    = "0.1"
tracing-subscriber = "0.3"
anyhow     = "1"
